still on docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,18 @@
 services:
 # nginx
   web:
-    image: nginx:latest
+    build:
+        dockerfile: ./nginx/Dockerfile
+        context: .
     ports:
-      - "8085:80"
+            - "80:80"    
     volumes:
-      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+        - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
 
   app:
     build:
       dockerfile: ./Dockerfile    
       context: .
-    ports:
-      - 9004:9004  
+    volumes:
+      - ./app:/app      
 # php
