--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,40 @@ services:
             - "80:80"    
     volumes:
         - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+        - ./uploads:/uploads
+        - ./tmp:/tmp
+        - ./admin/tmp:/admin/tmp
 
   app:
     build:
       dockerfile: ./Dockerfile    
       context: .
+    environment:
+            MYSQL_HOST: db
+            MYSQL_PORT: 3306
+            MYSQL_PASSWORD: Local77Database!
+            MYSQL_DATABASE: mlite
+            MYSQL_USER: mliteuser
     volumes:
-      - ./app:/app      
+      - .:/app
+     
+    ports:
+      - "9000:9000"     
+
+# mysql
+  db:
+      image: mysql:8.0
+      volumes:
+          - mysqldata:/var/lib/mysql
+      restart: always
+      ports:
+      - "4306:3306" 
+      environment:
+          MYSQL_ROOT_PASSWORD: Local77Database!
+          MYSQL_USER: mliteuser
+          MYSQL_PASSWORD: Local77Database!
+          MYSQL_DATABASE: mlite        
 # php
+volumes:
+    mysqldata:
+    uploads:
