--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -13,17 +13,17 @@ server {
         }
     }
 
-    location ^~ /systems/data/ {
-        deny all;
-        return 403;
-    }
+    # location ^~ /systems/data/ {
+    #     deny all;
+    #     return 403;
+    # }
 
     location  /admin {
         index index.php;
         try_files $uri /admin/index.php?$args;
     }
 
-     location ~ \.php$ {
+    location ~ \.php$ {
        fastcgi_pass   app:9000;
        fastcgi_index  index.php;
        fastcgi_param REQUEST_METHOD $request_method;
