--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -4,8 +4,6 @@ server {
     root /var/www/html/public;
     index index.php;
 
-   
-
     location  / {
         index  index.php;
         if (!-e $request_filename) {
@@ -13,16 +11,15 @@ server {
         }
     }
 
-    # location ^~ /systems/data/ {
-    #     deny all;
-    #     return 403;
-    # }
+    location ^~ /systems/data/ {
+        deny all;
+        return 403;
+    }
 
     location  /admin {
         index index.php;
-        try_files $uri /admin/index.php?$args;
+        try_files $uri $uri/ /admin/index.php?$args;
     }
-
     location ~ \.php$ {
        fastcgi_pass   app:9000;
        fastcgi_index  index.php;
